scripts/nullaway/annotator/url748e34f967_Diab1o_java_7z_archiver_tgz-pJ8-com_swemel_sevenzip_TestJ8.txt
../annotator/url748e34f967_Diab1o_java_7z_archiver_tgz-pJ8-com_swemel_sevenzip_TestJ8/src/com/swemel/sevenzip/compression/lzma/Encoder.java:153: error: [NullAway] @NonNull field Encoder$LiteralEncoder.m_Coders not initialized
        Encoder2[] m_Coders;
                   ^
    (see http://t.uber.com/nullaway )
../annotator/url748e34f967_Diab1o_java_7z_archiver_tgz-pJ8-com_swemel_sevenzip_TestJ8/src/com/swemel/sevenzip/compression/lzma/Encoder.java:317: error: [NullAway] assigning @Nullable expression to @NonNull field
    private com.swemel.sevenzip.compression.lz.BinTree _matchFinder = null;
                                                       ^
    (see http://t.uber.com/nullaway )
../annotator/url748e34f967_Diab1o_java_7z_archiver_tgz-pJ8-com_swemel_sevenzip_TestJ8/src/com/swemel/sevenzip/compression/lzma/Encoder.java:1296: error: [NullAway] assigning @Nullable expression to @NonNull field
            _matchFinder = null;
                         ^
    (see http://t.uber.com/nullaway )
../annotator/url748e34f967_Diab1o_java_7z_archiver_tgz-pJ8-com_swemel_sevenzip_TestJ8/src/com/swemel/sevenzip/archive/FileItem.java:72: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return name;
        ^
    (see http://t.uber.com/nullaway )
../annotator/url748e34f967_Diab1o_java_7z_archiver_tgz-pJ8-com_swemel_sevenzip_TestJ8/src/com/swemel/common/ByteBuffer.java:15: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return items;
        ^
    (see http://t.uber.com/nullaway )
../annotator/url748e34f967_Diab1o_java_7z_archiver_tgz-pJ8-com_swemel_sevenzip_TestJ8/src/com/swemel/sevenzip/compression/lz/BinTree.java:41: error: [NullAway] @NonNull field _son not initialized
    private int[] _son;
                  ^
    (see http://t.uber.com/nullaway )
../annotator/url748e34f967_Diab1o_java_7z_archiver_tgz-pJ8-com_swemel_sevenzip_TestJ8/src/com/swemel/sevenzip/compression/lz/BinTree.java:42: error: [NullAway] @NonNull field _hash not initialized
    private int[] _hash;
                  ^
    (see http://t.uber.com/nullaway )
../annotator/url748e34f967_Diab1o_java_7z_archiver_tgz-pJ8-com_swemel_sevenzip_TestJ8/src/com/swemel/sevenzip/compression/lz/InWindow.java:36: error: [NullAway] @NonNull field _bufferBase not initialized
    byte[] _bufferBase; // pointer to buffer with data
           ^
    (see http://t.uber.com/nullaway )
../annotator/url748e34f967_Diab1o_java_7z_archiver_tgz-pJ8-com_swemel_sevenzip_TestJ8/src/com/swemel/sevenzip/compression/lz/InWindow.java:74: error: [NullAway] dereferenced expression _stream is @Nullable
            int numReadBytes = _stream.read(_bufferBase, _bufferOffset + _streamPos, size);
                                      ^
    (see http://t.uber.com/nullaway )
../annotator/url748e34f967_Diab1o_java_7z_archiver_tgz-pJ8-com_swemel_sevenzip_TestJ8/src/com/swemel/sevenzip/compression/lz/InWindow.java:93: error: [NullAway] assigning @Nullable expression to @NonNull field
        _bufferBase = null;
                    ^
    (see http://t.uber.com/nullaway )
../annotator/url748e34f967_Diab1o_java_7z_archiver_tgz-pJ8-com_swemel_sevenzip_TestJ8/src/com/swemel/sevenzip/compression/rangecoder/Encoder.java:45: error: [NullAway] dereferenced expression Stream is @Nullable
        Stream.flush();
              ^
    (see http://t.uber.com/nullaway )
../annotator/url748e34f967_Diab1o_java_7z_archiver_tgz-pJ8-com_swemel_sevenzip_TestJ8/src/com/swemel/sevenzip/compression/rangecoder/Encoder.java:54: error: [NullAway] dereferenced expression Stream is @Nullable
                Stream.write(temp + LowHi);
                      ^
    (see http://t.uber.com/nullaway )
../annotator/url748e34f967_Diab1o_java_7z_archiver_tgz-pJ8-com_swemel_sevenzip_TestJ8/src/com/swemel/sevenzip/CRC.java:59: error: [NullAway] dereferenced expression data is @Nullable
            _value = table[(_value ^ data[i]) & 0xFF] ^ (_value >>> 8);
                                         ^
    (see http://t.uber.com/nullaway )
../annotator/url748e34f967_Diab1o_java_7z_archiver_tgz-pJ8-com_swemel_sevenzip_TestJ8/src/com/swemel/sevenzip/archive/SevenZipFolderInStream.java:14: error: [NullAway] @NonNull field stream not initialized
    private InStreamWithCRC stream;
                            ^
    (see http://t.uber.com/nullaway )
../annotator/url748e34f967_Diab1o_java_7z_archiver_tgz-pJ8-com_swemel_sevenzip_TestJ8/src/com/swemel/sevenzip/archive/SevenZipFolderInStream.java:38: error: [NullAway] dereferenced expression updateItems is @Nullable
            stream = new InStreamWithCRC(updateItems.get(off + _fileIndex).getFullName());
                                                    ^
    (see http://t.uber.com/nullaway )
../annotator/url748e34f967_Diab1o_java_7z_archiver_tgz-pJ8-com_swemel_sevenzip_TestJ8/src/com/swemel/sevenzip/common/InStreamWithCRC.java:17: error: [NullAway] passing @Nullable parameter 'fileName' where @NonNull is required
        stream = new RandomAccessFile(new File(fileName), "r");
                                               ^
    (see http://t.uber.com/nullaway )
../annotator/url748e34f967_Diab1o_java_7z_archiver_tgz-pJ8-com_swemel_sevenzip_TestJ8/src/com/swemel/sevenzip/archive/OutArchive.java:27: error: [NullAway] initializer method does not guarantee @NonNull fields stream (line 22), crc (line 24) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public OutArchive() {
           ^
    (see http://t.uber.com/nullaway )
../annotator/url748e34f967_Diab1o_java_7z_archiver_tgz-pJ8-com_swemel_sevenzip_TestJ8/src/com/swemel/sevenzip/archive/OutArchive.java:122: error: [NullAway] dereferenced expression coder.getProps() is @Nullable
                int propsSize = coder.getProps().getCapacity();
                                                ^
    (see http://t.uber.com/nullaway )
../annotator/url748e34f967_Diab1o_java_7z_archiver_tgz-pJ8-com_swemel_sevenzip_TestJ8/src/com/swemel/common/OutBuffer.java:45: error: [NullAway] dereferenced expression _buffer is @Nullable
        _buffer[_pos++] = b;
               ^
    (see http://t.uber.com/nullaway )
../annotator/url748e34f967_Diab1o_java_7z_archiver_tgz-pJ8-com_swemel_sevenzip_TestJ8/src/com/swemel/sevenzip/compression/lz/OutWindow.java:36: error: [NullAway] @NonNull field _buffer not initialized
    private byte[] _buffer;
                   ^
    (see http://t.uber.com/nullaway )
../annotator/url748e34f967_Diab1o_java_7z_archiver_tgz-pJ8-com_swemel_sevenzip_TestJ8/src/com/swemel/sevenzip/compression/lz/OutWindow.java:73: error: [NullAway] dereferenced expression _stream is @Nullable
        _stream.write(_buffer, _streamPos, size);
               ^
    (see http://t.uber.com/nullaway )
../annotator/url748e34f967_Diab1o_java_7z_archiver_tgz-pJ8-com_swemel_sevenzip_TestJ8/src/com/swemel/sevenzip/compression/rangecoder/Decoder.java:16: error: [NullAway] @NonNull field Stream not initialized
    private java.io.InputStream Stream;
                                ^
    (see http://t.uber.com/nullaway )
../annotator/url748e34f967_Diab1o_java_7z_archiver_tgz-pJ8-com_swemel_sevenzip_TestJ8/src/com/swemel/sevenzip/compression/rangecoder/Decoder.java:23: error: [NullAway] assigning @Nullable expression to @NonNull field
        Stream = null;
               ^
    (see http://t.uber.com/nullaway )
../annotator/url748e34f967_Diab1o_java_7z_archiver_tgz-pJ8-com_swemel_sevenzip_TestJ8/src/com/swemel/sevenzip/compression/lzma/Decoder.java:112: error: [NullAway] @NonNull field Decoder$LiteralDecoder.m_Coders not initialized
        Decoder2[] m_Coders;
                   ^
    (see http://t.uber.com/nullaway )
24 errors
